# flurry

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
src/: main.rs  prelude.rs
src/apps/: add.rs  cmd.rs  export.rs  go.rs  import.rs  interactive.rs  list.rs  mod.rs  play.rs  rm.rs  set_attr.rs
src/cli/: app.rs  argh.rs  clap.rs  init.rs  mod.rs  types.rs
src/config/: get.rs  mod.rs  read.rs  types.rs  write.rs
src/tui/: events.rs  io.rs  layout.rs  layouts.rs  mod.rs  opts.rs  prelude.rs
src/tui/layouts/: list.rs
src/tui/runtime/: events.rs  list.rs  mod.rs  state.rs  table.rs
src/tui/widgets/: list.rs  mod.rs  popup.rs  table.rs
src/tui/widgets/popup/: add.rs  edit.rs  exit.rs  filters.rs  info.rs  mod.rs  rm.rs
src/utils/: macros.rs  mod.rs  os.rs  parse.rs  traits.rs
src/utils/browser/: aliases.rs  bin.rs  run.rs
src/utils/cmd/: mod.rs
src/utils/fs/: recursive.rs
src/utils/media/: player.rs
src/utils/os/: linux.rs  mod.rs
src/utils/programs/: generic.rs  mod.rs
src/utils/programs/browser/: aliases.rs  bin.rs  mod.rs  run.rs
src/utils/programs/media/: mod.rs  player.rs
