[package]
name = "flurry"
version = "0.1.0"
authors = ["David Fajardo <sys_lectern@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
colored = "2.0.0"
home = "0.5.3"
loading = "0.1.2"
percent-encoding = "2.1.0"
rand = "0.8.3"
serde = { version = "1.0.123", features = ["derive"] }
termion = "1.5.6"
tinyvec = { version = "1.1.1", features = ["rustc_1_40"] }
toml = "0.5.8"
tui = "0.14.0"
which = "4.0.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
