[package]
name = "flurry"
version = "0.1.2"
authors = ["David Fajardo <sys_lectern@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
argh = "0.1.4"
crossterm = "0.19.0"
home = "0.5.3"
loading = "0.1.2"
percent-encoding = "2.1.0"
rand = "0.8.3"
regex = "1.4.4"
serde = { version = "1.0.123", features = ["derive"] }
tinyvec = { version = "1.1.1", features = ["rustc_1_40"] }
toml = "0.5.8"
tui = { version = "0.14.0", features = ["crossterm"], default_features = false}
which = "4.0.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
